@@ -93,7 +93,7 @@ public class ExonAnnotationToVCFConverter {
                 .chr(chromosome)
                 .start(position)
                 .alleles(alleles)
-                .computeEndFromAlleles(alleles, new Long(position).intValue())
+                .computeEndFromAlleles(alleles, Long.valueOf(position).intValue())
                 .attribute(VCFWriterFactory.INPUT_FIELD, KeyFormatter.toExonKey(gene, transcript, exonRank))
                 .attribute(VCFWriterFactory.SOURCES_FIELD, Knowledgebase.toCommaSeparatedSourceString(knowledgebases))
                 .make();
